--- a/app/src/main/res/layout/activity_basic_info.xml
+++ b/app/src/main/res/layout/activity_basic_info.xml
@@ -434,10 +434,11 @@
                     android:inputType="number" />
 
                 <android.support.design.widget.TextInputLayout
-                    android:id="@+id/text_input_layout"
+                    android:id="@+id/text_errorview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:errorEnabled="true">
+                    app:errorEnabled="true"
+                    app:hintEnabled="false">
 
                     <EditText
                         android:id="@+id/edt_morning_shift_to"
@@ -467,10 +468,11 @@
                     android:inputType="text" />
 
                 <android.support.design.widget.TextInputLayout
-                    android:id="@+id/text_input_layout2"
+                    android:id="@+id/text_error2view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:errorEnabled="true">
+                    app:errorEnabled="true"
+                    app:hintEnabled="false">
 
                     <EditText
                         android:id="@+id/edt_evening_shift_to"
