--- a/app/src/main/res/layout/activity_room_table.xml
+++ b/app/src/main/res/layout/activity_room_table.xml
@@ -141,6 +141,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:layoutDirection="rtl"
+        android:visibility="gone"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_home"
         app:menu="@menu/activity_home_drawer" />
