--- a/app/src/main/res/layout/activity_sketch_place.xml
+++ b/app/src/main/res/layout/activity_sketch_place.xml
@@ -24,40 +24,57 @@
     android:layout_height="match_parent"
     android:layout_marginTop="55dp"
     >
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".FormFragments.SketchPlaceFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="اضغط علي الصورة لاضافة رسم كروكي للمكان"
-        android:textAlignment="center"
-        android:textColor="#000"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/ivPicImage"
-        app:layout_constraintStart_toStartOf="@+id/ivPicImage"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        tools:context=".FormFragments.SketchPlaceFragment">
 
-    <ImageView
-        android:id="@+id/ivPicImage"
-        android:layout_width="239dp"
-        android:layout_height="225dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="168dp"
-        android:src="@drawable/blueprint"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent" />
+        <!-- TODO: Update blank fragment layout -->
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="اضغط علي الصورة لاضافة رسم كروكي للمكان"
+            android:textAlignment="center"
+            android:textColor="#000"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/ivPicImage"
+            app:layout_constraintStart_toStartOf="@+id/ivPicImage"
+            app:layout_constraintTop_toTopOf="parent" />
 
-</android.support.constraint.ConstraintLayout>
+        <ImageView
+            android:id="@+id/ivPicImage"
+            android:layout_width="239dp"
+            android:layout_height="225dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="180dp"
+            android:src="@drawable/blueprint"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.503"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/btn_delete_photo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="80dp"
+            android:background="#660914"
+            android:onClick="deleteImage"
+            android:text="مسح الصورة"
+            android:textColor="#fff"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/ivPicImage"
+            app:layout_constraintStart_toStartOf="@+id/ivPicImage" />
+
+    </android.support.constraint.ConstraintLayout>
     <Button
         android:id="@+id/btnSendData"
         android:layout_width="match_parent"
@@ -77,7 +94,6 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-
         android:layoutDirection="rtl"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_home"
