--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -32,6 +32,7 @@
                     android:layout_marginEnd="5dp"
                     android:layout_marginStart="5dp"
                     android:textColor="@color/colorRow"
+
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -41,8 +42,20 @@
                     android:layout_height="40dp"
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="50dp"
                     android:src="@drawable/logoicon" />
+                <ImageView
+                    android:id="@+id/ivBack"
+                    android:layout_width="30dp"
+                    android:layout_height="24dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="10dp"
+                    android:onClick="closeScreen"
+                    android:layout_marginEnd="10dp"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/backarrow" />
+
 
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
