--- a/app/src/main/res/layout/activity_basic_info.xml
+++ b/app/src/main/res/layout/activity_basic_info.xml
@@ -445,7 +445,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="32dp"
                     android:text="الداومين معا"
-                    android:background="@color/colorPrimary"
+                    android:background="@drawable/corner"
                     android:textColor="#fff" />
 
                 <Button
@@ -457,7 +457,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="32dp"
                     android:text="مسائى فقط"
-                    android:background="@color/colorPrimary"
+                    android:background="@drawable/corner"
                     android:textColor="#fff" />
 
                 <Button
@@ -468,7 +468,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:text="صباحى فقط"
-                    android:background="@color/colorPrimary"
+                    android:background="@drawable/corner"
                     android:textColor="#fff" />
 
             </LinearLayout>
@@ -476,23 +476,65 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
-                <EditText
-                    android:id="@+id/edt_morning_shift_from"
+
+                <LinearLayout
+                    android:id="@+id/linearLayout3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:weightSum="3"
+                    android:orientation="horizontal">
+                    <Button
+                        android:id="@+id/btn_delet_from_mor"
+                        android:layout_width="0dp"
+                        android:layout_weight="0.5"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:text="حذف"
+                        android:onClick="deleteMorningFrom"
+                        android:background="@drawable/corner_gray"
+                        android:textColor="@color/colorPrimary"
+                        android:layout_marginEnd="8dp"/>
+                <EditText
+                    android:id="@+id/edt_morning_shift_from"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2.5"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/editback"
                     android:ems="10"
                     android:focusable="false"
                     android:hint="بداية وقت الدوام الصباحي  "
                     android:inputType="number" />
+                </LinearLayout>
 
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/text_errorview"
+                <LinearLayout
+                    android:id="@+id/linearLayout4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:errorEnabled="true"
-                    app:hintEnabled="false">
+                    android:weightSum="3"
+                    android:orientation="horizontal">
+                    <Button
+                        android:id="@+id/btn_delet_to_mor"
+                        android:layout_width="0dp"
+                        android:layout_weight="0.5"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:text="حذف"
+                        android:onClick="deleteMorningTo"
+                        android:background="@drawable/corner_gray"
+                        android:textColor="@color/colorPrimary"
+                        android:layout_marginEnd="8dp"/>
+
+
+
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/text_errorview"
+                        android:layout_width="0dp"
+                        android:layout_weight="2.5"
+                        android:layout_height="wrap_content"
+                        app:errorEnabled="true"
+                        app:hintEnabled="false">
 
                     <EditText
                         android:id="@+id/edt_morning_shift_to"
@@ -507,10 +549,31 @@
                         android:hint="نهاية وقت العمل الصباحي"
                         android:inputType="text" />
                 </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/linearLayout5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="3"
+                    android:orientation="horizontal">
+                    <Button
+                        android:id="@+id/btn_delet_from_eve"
+                        android:layout_width="0dp"
+                        android:layout_weight="0.5"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:text="حذف"
+                        android:onClick="deleteEveningFrom"
+                        android:background="@drawable/corner_gray"
+                        android:textColor="@color/colorPrimary"
+                        android:layout_marginEnd="8dp"/>
 
                 <EditText
                     android:id="@+id/edt_evening_shift_from"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="2.5"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/editback"
@@ -520,11 +583,32 @@
                     android:focusable="false"
                     android:hint="بداية وقت الدوام المسائي  "
                     android:inputType="text" />
-
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/text_error2view"
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/linearLayout6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:weightSum="3"
+                    android:orientation="horizontal">
+                    <Button
+                        android:id="@+id/btn_delet_to_eve"
+                        android:layout_width="0dp"
+                        android:layout_weight="0.5"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+
+                        android:text="حذف"
+                        android:onClick="deleteEveningTo"
+                        android:background="@drawable/corner_gray"
+                        android:textColor="@color/colorPrimary"
+                        android:layout_marginEnd="8dp"/>
+
+
+                    <android.support.design.widget.TextInputLayout
+                    android:id="@+id/text_error2view"
+                        android:layout_width="0dp"
+                        android:layout_weight="2.5"
+                        android:layout_height="wrap_content"
                     app:errorEnabled="true"
                     app:hintEnabled="false">
 
@@ -540,6 +624,7 @@
                         android:hint="نهاية وقت الدوام المسائي  "
                         android:inputType="text" />
                 </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
